--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ tokio = { version = "1.28", features = ["full"] }
 reqwest = { version = "0.11", features = ["json"] }
 regex = "1.9"
 tiktoken-rs = "0.6.0"
+tch = "0.20.0"
